--- a/arch/arm64/configs/polaris_defconfig
+++ b/arch/arm64/configs/polaris_defconfig
@@ -4745,10 +4745,10 @@ CONFIG_USB_STORAGE=y
 # CONFIG_USB_CDNS_SUPPORT is not set
 # CONFIG_USB_MUSB_HDRC is not set
 CONFIG_USB_DWC3=y
-CONFIG_USB_DWC3_ULPI=y
+# CONFIG_USB_DWC3_ULPI is not set
 # CONFIG_USB_DWC3_HOST is not set
-# CONFIG_USB_DWC3_GADGET is not set
-CONFIG_USB_DWC3_DUAL_ROLE=y
+CONFIG_USB_DWC3_GADGET=y
+# CONFIG_USB_DWC3_DUAL_ROLE is not set
 
 #
 # Platform Glue Driver Support
@@ -4757,17 +4757,7 @@ CONFIG_USB_DWC3_DUAL_ROLE=y
 # CONFIG_USB_DWC3_HAPS is not set
 CONFIG_USB_DWC3_OF_SIMPLE=y
 CONFIG_USB_DWC3_QCOM=y
-CONFIG_USB_DWC2=y
-# CONFIG_USB_DWC2_HOST is not set
-
-#
-# Gadget/Dual-role mode requires USB Gadget support to be enabled
-#
-# CONFIG_USB_DWC2_PERIPHERAL is not set
-CONFIG_USB_DWC2_DUAL_ROLE=y
-# CONFIG_USB_DWC2_PCI is not set
-# CONFIG_USB_DWC2_DEBUG is not set
-# CONFIG_USB_DWC2_TRACK_MISSED_SOFS is not set
+# CONFIG_USB_DWC2 is not set
 # CONFIG_USB_CHIPIDEA is not set
 # CONFIG_USB_ISP1760 is not set
 
@@ -4958,7 +4948,7 @@ CONFIG_USB_ETH_RNDIS=y
 # CONFIG_USB_RAW_GADGET is not set
 # end of USB Gadget precomposed configurations
 
-CONFIG_TYPEC=y
+CONFIG_TYPEC=m
 CONFIG_TYPEC_TCPM=m
 CONFIG_TYPEC_TCPCI=m
 # CONFIG_TYPEC_RT1711H is not set
@@ -6235,7 +6225,6 @@ CONFIG_PHY_QCOM_USB_SNPS_FEMTO_V2=y
 # CONFIG_PHY_QCOM_USB_HS_28NM is not set
 # CONFIG_PHY_QCOM_USB_SS is not set
 # CONFIG_PHY_QCOM_IPQ806X_USB is not set
-# CONFIG_PHY_SAMSUNG_USB2 is not set
 # CONFIG_PHY_TUSB1210 is not set
 # end of PHY Subsystem
 
