--- a/arch/arm64/boot/dts/qcom/sdm845-xiaomi-polaris.dts
+++ b/arch/arm64/boot/dts/qcom/sdm845-xiaomi-polaris.dts
@@ -7,14 +7,14 @@
 
 /dts-v1/;
 
+#include <dt-bindings/dma/qcom-gpi.h>
 #include <dt-bindings/gpio/gpio.h>
+#include <dt-bindings/pinctrl/qcom,pmic-gpio.h>
 #include <dt-bindings/regulator/qcom,rpmh-regulator.h>
 #include "sdm845.dtsi"
+#include "pm8998.dtsi"
+#include "pmi8998.dtsi"
 
-/*
- * Delete following upstream (sdm845.dtsi) reserved
- * memory mappings which are different in this device.
- */
 /delete-node/ &tz_mem;
 /delete-node/ &adsp_mem;
 /delete-node/ &wlan_msa_mem;
@@ -26,10 +26,21 @@
 /delete-node/ &spss_mem;
 /delete-node/ &rmtfs_mem;
 
+/delete-node/ &cdsp_pas;
+/delete-node/ &dsi0;
+/delete-node/ &dsi0_phy;
+/delete-node/ &dsi1;
+/delete-node/ &dsi1_phy;
+/delete-node/ &mdss;
+/delete-node/ &mss_pil;
+/delete-node/ &sdhc_2;
+
+/delete-node/ &dispcc;
+
 / {
 
 	model = "Xiaomi MIX 2s";
-	compatible = "xiaomi,polaris", "qcom,sdm845", "qcom,mtp";
+	compatible = "xiaomi,polaris", "qcom,sdm845";
 
 	/* required for bootloader to select correct board */
 	qcom,board-id = <0x2a 0x0>;
@@ -158,11 +169,6 @@
 
 		vin-supply = <&vph_pwr>;
 	};
-};
-
-&adsp_pas {
-	status = "okay";
-	firmware-name = "qcom/sdm845/mi8/adsp.mbn";
 };
 
 &apps_rsc {
@@ -461,10 +467,6 @@
 	};
 };
 
-&cdsp_pas {
-	status = "okay";
-};
-
 &gcc {
 	protected-clocks = <GCC_QSPI_CORE_CLK>,
 			   <GCC_QSPI_CORE_CLK_SRC>,
@@ -473,18 +475,8 @@
 			   <GCC_LPASS_SWAY_CLK>;
 };
 
-&dispcc {
-	status = "disabled";
-};
-
 &gpu {
 	status = "disabled";
-};
-
-/* Modem/wifi*/
-&mss_pil {
-	status = "okay";
-	firmware-name = "qcom/sdm845/mi8/mba.mbn", "qcom/sdm845/mi8/modem.mbn";
 };
 
 &qupv3_id_1 {
@@ -513,11 +505,26 @@
 
 &usb_1 {
 	status = "okay";
+
+	/*
+	 * disable USB3 clock requirement as the device only supports
+	 * USB2.
+	 */
+	qcom,select-utmi-as-pipe-clk;
 };
 
 &usb_1_dwc3 {
-	/* Until we have Type C hooked up we'll force this as peripheral. */
+	/*
+	 * We don't have the capability to switch modes yet.
+	 */
 	dr_mode = "peripheral";
+
+	/* fastest mode for USB 2 */
+	maximum-speed = "high-speed";
+
+	/* Remove USB3 phy as it's unused on this device. */
+	phys = <&usb_1_hsphy>;
+	phy-names = "usb2-phy";
 };
 
 &usb_1_hsphy {
@@ -531,53 +538,6 @@
 	qcom,hstx-trim-value = <QUSB2_V2_HSTX_TRIM_21_6_MA>;
 	qcom,preemphasis-level = <QUSB2_V2_PREEMPHASIS_5_PERCENT>;
 	qcom,preemphasis-width = <QUSB2_V2_PREEMPHASIS_WIDTH_HALF_BIT>;
-};
-
-&usb_1_qmpphy {
-	status = "okay";
-
-	vdda-phy-supply = <&vdda_usb1_ss_1p2>;
-	vdda-pll-supply = <&vdda_usb1_ss_core>;
-};
-
-&usb_2 {
-	status = "okay";
-};
-
-&usb_2_dwc3 {
-	/*
-	 * Though the USB block on SDM845 can support host, there's no vbus
-	 * signal for this port on MTP.  Thus (unless you have a non-compliant
-	 * hub that works without vbus) the only sensible thing is to force
-	 * peripheral mode.
-	 */
-	dr_mode = "peripheral";
-};
-
-&usb_2_hsphy {
-	status = "okay";
-
-	vdd-supply = <&vdda_usb2_ss_core>;
-	vdda-pll-supply = <&vdda_qusb_hs0_1p8>;
-	vdda-phy-dpdm-supply = <&vdda_qusb_hs0_3p1>;
-
-	qcom,imp-res-offset-value = <8>;
-	qcom,hstx-trim-value = <QUSB2_V2_HSTX_TRIM_22_8_MA>;
-};
-
-&usb_2_qmpphy {
-	status = "okay";
-
-	vdda-phy-supply = <&vdda_usb2_ss_1p2>;
-	vdda-pll-supply = <&vdda_usb2_ss_core>;
-};
-
-&wifi {
-	status = "okay";
-	vdd-0.8-cx-mx-supply = <&vreg_l5a_0p8>;
-	vdd-1.8-xo-supply = <&vreg_l7a_1p8>;
-	vdd-1.3-rfa-supply = <&vreg_l17a_1p3>;
-	vdd-3.3-ch0-supply = <&vreg_l25a_3p3>;
 };
 
 /* PINCTRL - additions to nodes defined in sdm845.dtsi */
@@ -607,3 +567,4 @@
 &tlmm {
 	gpio-reserved-ranges = <0 4>, <81 4>;
 };
+
